test/library/packages/Sort/errors/errors-compare.compopts
-scomparator=boolean # errors-compare.boolean.good
-scomparator=rec     # errors-compare.rec.good
-scomparator=str     # errors-compare.str.good
